Create URLs via URI.create().toURL()
Replace direct new URL(...) calls with URI.create(...).toURL() and add java.net.URI imports. Changes applied in Metrics, EncryptionUtils, and HastebinUtility to centralize URI parsing/creation and avoid potential URL parsing/encoding issues.